--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,6 +7,9 @@ jobs:
       - name: welcome
         run: echo "Welcome!"
         
+      - name: restore
+        run: dotnet restore
+        
       - name: build
         run: dotnet build
       
