--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,11 +7,8 @@ jobs:
       - name: welcome
         run: echo "Welcome!"
         
-      - name: restore
-        run: dotnet restore
-        
       - name: build
-        run: dotnet build
+        run: dotnet build ActionsKataExample
       
       - name: test
-        run: dotnet test
+        run: dotnet test ActionsKataExample.Tests
